--- a/views/write.html
+++ b/views/write.html
@@ -7,7 +7,7 @@
             <!--? 게시글 업로드 폼 -->
             <form action="/post" method="post" enctype="multipart/form-data">
                 <fieldset>
-                    <textarea name="content" maxlength="1000" placeholder="본문에 #을 이용하여 태그를 사용해보세요!" autofocus></textarea>
+                    <textarea name="content" maxlength="1000" placeholder="본문에 #을 이용하여 오늘의 감성을 공유해보세요!" autofocus></textarea>
                     <ul>
                         <li>
                             <label id="img-label" for="img"><i class="far fa-image"></i>사진 선택</label>
